--- a/Fina Alkaer/aboutUs.html
+++ b/Fina Alkaer/aboutUs.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/about.css">
+    <link rel="stylesheet" href="about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
@@ -37,10 +37,11 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="iftar.html">Iftar</a></li>
                             <li><a class="dropdown-item" href="Packages.html">Packages</a></li>
+                            <li><a class="dropdown-item" href="Events.html">Events</a></li>
                         </ul>
                     </li>
     
-                    <li class="nav-item"><a class="nav-link" href="ContacUs.html" style="color: #239993;">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactUS.html" style="color: #239993;">Contact Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html" style="color: #239993;">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="Com.html" style="color: #239993;">Community</a></li>
                 </ul>
@@ -346,6 +347,48 @@
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script>
+
+        $('.slider').slick({
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            arrows: true,
+            dots: false,
+            centerMode: true,
+            variableWidth: true,
+            infinite: true,
+            focusOnSelect: true,
+            cssEase: 'linear',
+            touchMove: true,
+            prevArrow: '<button class="slick-prev"> < </button>',
+            nextArrow: '<button class="slick-next"> > </button>',
+
+            //         responsive: [                        
+            //             {
+            //               breakpoint: 576,
+            //               settings: {
+            //                 centerMode: false,
+            //                 variableWidth: false,
+            //               }
+            //             },
+            //         ]
+        });
+
+        var imgs = $('.slider img');
+        imgs.each(function () {
+            var item = $(this).closest('.item');
+            item.css({
+                'background-image': 'url(' + $(this).attr('src') + ')',
+                'background-position': 'center',
+                '-webkit-background-size': 'cover',
+                'background-size': 'cover',
+            });
+            $(this).hide();
+        });
+    </script>
 
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
 </body>
