--- a/Fina Alkaer/index.html
+++ b/Fina Alkaer/index.html
@@ -89,11 +89,14 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="iftar.html">Iftar</a></li>
                             <li><a class="dropdown-item" href="Packages.html">Packages</a></li>
+                            <li><a class="dropdown-item" href="Events.html">Events</a></li>
                         </ul>
                     </li>
     
                     <li class="nav-item"><a class="nav-link" href="contactUS.html" style="color: #239993;">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html" style="color: #239993;">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html" style="color: #239993; display: block;" id="Login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="profile.html" style="color: #239993; display: none; " id="Profile">Profile</a></li>
+
                     <li class="nav-item"><a class="nav-link" href="Com.html" style="color: #239993;">Community</a></li>
                 </ul>
                 <!-- Uncomment the donate button if needed -->
@@ -278,6 +281,6 @@
     
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
