--- a/Fina Alkaer/login.html
+++ b/Fina Alkaer/login.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="log/favicon.ico">
   <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/f2e55912f8.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/login.css">
+  <link rel="stylesheet" href="Login.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
@@ -74,15 +74,13 @@
       <div class="overlay-container">
         <div class="overlay">
           <div class="overlay-panel overlay-left">
-            <h1 class="title">Hello <br> friends</h1>
-            <p>If you have an account, login here and have fun</p>
+
             <button class="ghost" id="login">Login
               <i class="lni lni-arrow-left login"></i>
             </button>
           </div>
           <div class="overlay-panel overlay-right">
-            <h1 class="title">Start your <br> journey now</h1>
-            <p>If you don't have an account yet, join us and start your journey.</p>
+
             <button class="ghost" id="register">Register
               <i class="lni lni-arrow-right register"></i>
             </button>
@@ -92,7 +90,7 @@
     </div>
   </div>
 
-  <script src="/login.js"></script>
+  <script src="login.js"></script>
   
   
 </body>
