--- a/Fina Alkaer/aboutUs.html
+++ b/Fina Alkaer/aboutUs.html
@@ -349,46 +349,17 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script>
-
-        $('.slider').slick({
-            slidesToShow: 3,
-            slidesToScroll: 1,
-            arrows: true,
-            dots: false,
-            centerMode: true,
-            variableWidth: true,
-            infinite: true,
-            focusOnSelect: true,
-            cssEase: 'linear',
-            touchMove: true,
-            prevArrow: '<button class="slick-prev"> < </button>',
-            nextArrow: '<button class="slick-next"> > </button>',
-
-            //         responsive: [                        
-            //             {
-            //               breakpoint: 576,
-            //               settings: {
-            //                 centerMode: false,
-            //                 variableWidth: false,
-            //               }
-            //             },
-            //         ]
-        });
-
-        var imgs = $('.slider img');
-        imgs.each(function () {
-            var item = $(this).closest('.item');
-            item.css({
-                'background-image': 'url(' + $(this).attr('src') + ')',
-                'background-position': 'center',
-                '-webkit-background-size': 'cover',
-                'background-size': 'cover',
-            });
-            $(this).hide();
-        });
-    </script>
+        crossorigin="anonymous">
+        window.onload= () => {
+            let isLoggedIn= localStorage.getItem('email') ;
+        if (isLoggedIn) {
+                document.getElementById('Profile').style.display = 'block';
+                document.getElementById('Login').style.display = 'none';
+            } else {
+                document.getElementById('Profile').style.display = 'none';
+                document.getElementById('Login').style.display = 'block';}
+            }
+        </script>
 
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
 </body>
