--- a/Fina Alkaer/Com.html
+++ b/Fina Alkaer/Com.html
@@ -58,10 +58,13 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="iftar.html">Iftar</a></li>
                             <li><a class="dropdown-item" href="Packages.html">Packages</a></li>
+                            <li><a class="dropdown-item" href="Events.html">Events</a></li>
+
                         </ul>
                     </li>
     
-                    <li class="nav-item"><a class="nav-link" href="ContacUs.html" style="color: #239993;">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactUS.html" style="color: #239993;">Contact Us</a></li>
+
                     <li class="nav-item"><a class="nav-link" href="login.html" style="color: #239993;">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="Com.html" style="color: #239993;">Community</a></li>
                 </ul>
